@@ -29,6 +29,7 @@ Version 6.4.19
     Die Daten werden im ebenfalls neuen Objekt "AudioInfo" abgelegt.
     Die Funktion soll IdentMPEG ablösen und neben MP3 auch andere Formate
     unterstützen. Gegenwärtig wird MP3 und AIFF unterstützt.
+  - CString::PregMatch ist nun in zwei Versionen als "const" deklariert 
   
 Version 6.4.18 vom 04.02.2014	(SVN-Tag: REL_6_4_18)
   - CID3Tag: Neue Funktion zum Auslesen von PRIV-Frames (PrivateData)
